welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: '=>' expected but integer literal found.
		case _ 0
                       ^