welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	(a,b) match {
		case _ if (Math.abs(10-a) < Math.abs(10-b)) => a
		case _ if (Math.abs(10-a) > Math.abs(10-b)) => b
		case _ 0
			
	}
}
